--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4215,64 +4215,394 @@ section.lazy-placeholder:after {
 .cid-s2JXIUAwDg .mbr-text {
   color: #ffffff;
 }
-.cid-s2JKjAvGCO {
-  padding-top: 30px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
+.cid-s2JKjz8h7y .navbar {
+  padding: .5rem 0;
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
 }
-.cid-s2JKjAvGCO .mbr-section-subtitle {
-  color: #465052;
-  font-weight: 300;
+.cid-s2JKjz8h7y .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
 }
-.cid-s2JKjAvGCO .mbr-content-text {
-  color: #4f4943;
+.cid-s2JKjz8h7y a {
+  font-style: normal;
 }
-.cid-s2JKjAvGCO .card {
-  word-wrap: break-word;
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
+.cid-s2JKjz8h7y .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
 }
-.cid-s2JKjAvGCO .mbr-iconfont {
-  font-size: 80px;
-  color: #149dcc;
-}
-.cid-s2JKjAvGCO .cards-container {
+.cid-s2JKjz8h7y .nav-item a {
   display: flex;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: center;
+  align-items: center;
   justify-content: center;
-  word-break: break-word;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
 }
-.cid-s2JKjAvGCO .media-block {
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
+.cid-s2JKjz8h7y .nav-item:focus,
+.cid-s2JKjz8h7y .nav-link:focus {
+  outline: none;
 }
-@media (min-width: 992px) {
-  .cid-s2JKjAvGCO .media-block {
-    padding-right: 2rem;
-  }
+.cid-s2JKjz8h7y .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
 }
-.cid-s2JKjAvGCO .cards-block {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
+.cid-s2JKjz8h7y .btn .mbr-iconfont {
+  font-size: 1.6rem;
 }
-.cid-s2JKjAvGCO .card-img {
+.cid-s2JKjz8h7y .menu-logo {
+  margin-right: auto;
+}
+.cid-s2JKjz8h7y .menu-logo .navbar-brand {
   display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-s2JKjz8h7y .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
   -webkit-align-items: center;
   align-items: center;
-  -webkit-flex-wrap: wrap;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-s2JKjz8h7y .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-s2JKjz8h7y .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-s2JKjz8h7y .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-s2JKjz8h7y .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-s2JKjz8h7y .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-s2JKjz8h7y .navbar-toggleable-sm .navbar-collapse .navbar-nav {
   flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-s2JKjz8h7y .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-s2JKjz8h7y .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-s2JKjz8h7y .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-s2JKjz8h7y .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-s2JKjz8h7y .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-s2JKjz8h7y .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-s2JKjz8h7y .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-s2JKjz8h7y .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-s2JKjz8h7y .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-s2JKjz8h7y .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-s2JKjz8h7y .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-s2JKjz8h7y .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-s2JKjz8h7y .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-s2JKjz8h7y .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-s2JKjz8h7y button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-s2JKjz8h7y button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-s2JKjz8h7y button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #767676;
+}
+.cid-s2JKjz8h7y button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-s2JKjz8h7y button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-s2JKjz8h7y button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-s2JKjz8h7y button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-s2JKjz8h7y nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-s2JKjz8h7y nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-s2JKjz8h7y nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-s2JKjz8h7y nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-s2JKjz8h7y .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-s2JKjz8h7y .collapsed .btn {
+  display: flex;
+}
+.cid-s2JKjz8h7y .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-s2JKjz8h7y .collapsed .navbar-collapse.collapsing,
+.cid-s2JKjz8h7y .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-s2JKjz8h7y .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-s2JKjz8h7y .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-s2JKjz8h7y .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-s2JKjz8h7y .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-s2JKjz8h7y .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-s2JKjz8h7y .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-s2JKjz8h7y .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-s2JKjz8h7y .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-s2JKjz8h7y .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-s2JKjz8h7y .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-s2JKjz8h7y .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-s2JKjz8h7y .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-s2JKjz8h7y .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-s2JKjz8h7y .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-s2JKjz8h7y .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-s2JKjz8h7y .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-s2JKjz8h7y .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
 }
 @media (max-width: 991px) {
-  .cid-s2JKjAvGCO .media-block {
-    flex-basis: 100%;
-    -webkit-flex-basis: 100%;
-    padding-left: 0;
-    padding-bottom: 2rem;
+  .cid-s2JKjz8h7y .navbar-expand {
+    flex-direction: column;
   }
+  .cid-s2JKjz8h7y img {
+    height: 3.8rem !important;
+  }
+  .cid-s2JKjz8h7y .btn {
+    display: flex;
+  }
+  .cid-s2JKjz8h7y button.navbar-toggler {
+    display: block;
+  }
+  .cid-s2JKjz8h7y .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-s2JKjz8h7y .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-s2JKjz8h7y .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-s2JKjz8h7y .navbar-collapse.collapsing,
+  .cid-s2JKjz8h7y .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-s2JKjz8h7y .navbar-collapse.collapsing .navbar-nav,
+  .cid-s2JKjz8h7y .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-s2JKjz8h7y .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-s2JKjz8h7y .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-s2JKjz8h7y .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-s2JKjz8h7y .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-s2JKjz8h7y .navbar-collapse.collapsing .navbar-buttons,
+  .cid-s2JKjz8h7y .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-s2JKjz8h7y .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-s2JKjz8h7y .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-s2JKjz8h7y .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-s2JKjz8h7y .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-s2JKjz8h7y .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-s2JKjz8h7y .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-s2JKjz8h7y .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-s2JKjz8h7y .navbar-collapse {
+  flex-basis: auto;
+}
+.cid-s2JKjz8h7y .nav-link:hover,
+.cid-s2JKjz8h7y .dropdown-item:hover {
+  color: #ff3366 !important;
 }
 .cid-s2JKjz8h7y .navbar {
   padding: .5rem 0;
@@ -4662,4 +4992,78 @@ section.lazy-placeholder:after {
 .cid-s2JKjz8h7y .nav-link:hover,
 .cid-s2JKjz8h7y .dropdown-item:hover {
   color: #ff3366 !important;
+}
+.cid-s4DNNMhCmH {
+  padding-top: 105px;
+  padding-bottom: 15px;
+  background-image: url("../../../assets/images/london-aerial-thames-guide-1.webp");
+}
+.cid-s4DNNMhCmH P {
+  color: #767676;
+}
+.cid-s4DNNMhCmH .mbr-text,
+.cid-s4DNNMhCmH .mbr-section-btn {
+  color: #ffffff;
+}
+.cid-s4DNNMhCmH H1 {
+  color: #ffffff;
+}
+.cid-s4DNP1EyYy {
+  padding-top: 30px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-s4DNP1EyYy .mbr-section-subtitle {
+  color: #465052;
+  font-weight: 300;
+}
+.cid-s4DNP1EyYy .mbr-content-text {
+  color: #4f4943;
+}
+.cid-s4DNP1EyYy .card {
+  word-wrap: break-word;
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+.cid-s4DNP1EyYy .mbr-iconfont {
+  font-size: 80px;
+  color: #149dcc;
+}
+.cid-s4DNP1EyYy .cards-container {
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+  word-break: break-word;
+}
+.cid-s4DNP1EyYy .media-block {
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+@media (min-width: 992px) {
+  .cid-s4DNP1EyYy .media-block {
+    padding-right: 2rem;
+  }
+}
+.cid-s4DNP1EyYy .cards-block {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-s4DNP1EyYy .card-img {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+@media (max-width: 991px) {
+  .cid-s4DNP1EyYy .media-block {
+    flex-basis: 100%;
+    -webkit-flex-basis: 100%;
+    padding-left: 0;
+    padding-bottom: 2rem;
+  }
 }
