--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5977,7 +5977,7 @@ section.lazy-placeholder:after {
 }
 .cid-s7xQ27UO8X {
   padding-top: 105px;
-  padding-bottom: 60px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-s7xQ27UO8X .mbr-text,
@@ -5987,281 +5987,24 @@ section.lazy-placeholder:after {
 .cid-s7xQ27UO8X .mbr-text P {
   text-align: left;
 }
-.cid-s7xRErmhdh {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
+.cid-s7yrNSu3c9 {
+  background: #ffffff;
+  padding-top: 15px;
+  padding-bottom: 60px;
 }
-.cid-s7xRErmhdh .content-slider {
-  display: -webkit-flex;
-  justify-content: center;
-  -webkit-justify-content: center;
+.cid-s7yrNSu3c9 .image-block {
+  margin: auto;
 }
-.cid-s7xRErmhdh .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-s7xRErmhdh .modal-body .close span {
-  font-style: normal;
-}
-.cid-s7xRErmhdh .carousel-inner > .active,
-.cid-s7xRErmhdh .carousel-inner > .next,
-.cid-s7xRErmhdh .carousel-inner > .prev {
-  display: -webkit-flex;
-}
-.cid-s7xRErmhdh .carousel-control .icon-next,
-.cid-s7xRErmhdh .carousel-control .icon-prev {
-  margin-top: -18px;
-  font-size: 40px;
-  line-height: 27px;
-}
-.cid-s7xRErmhdh .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-s7xRErmhdh .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-s7xRErmhdh .content-slider-wrap {
-    width: 100%!important;
-  }
-}
-.cid-s7xRErmhdh .boxed-slider {
-  position: relative;
-  padding: 93px 0;
-}
-.cid-s7xRErmhdh .boxed-slider > div {
+.cid-s7yrNSu3c9 figcaption {
   position: relative;
 }
-.cid-s7xRErmhdh .container img {
-  width: 100%;
-}
-.cid-s7xRErmhdh .container img + .row {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  transform: translateY(-50%);
-  z-index: 2;
-}
-.cid-s7xRErmhdh .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-s7xRErmhdh .mbr-table-cell {
-  padding: 0;
-}
-.cid-s7xRErmhdh .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-s7xRErmhdh .carousel-caption {
-  top: 50%;
-  right: 0;
-  bottom: auto;
-  left: 0;
-  display: -webkit-flex;
-  align-items: center;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  -webkit-align-items: center;
-}
-.cid-s7xRErmhdh .mbr-overlay {
-  z-index: 1;
-}
-.cid-s7xRErmhdh .container-slide.container {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-s7xRErmhdh .carousel-item {
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -o-transition: -o-transform 0.6s ease-in-out;
-  -webkit-transition: -webkit-transform 0.6s ease-in-out;
-  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-}
-@media (max-width: 576px) {
-  .cid-s7xRErmhdh .carousel-item .container {
-    width: 100%;
-  }
-}
-.cid-s7xRErmhdh .carousel-item-next.carousel-item-left,
-.cid-s7xRErmhdh .carousel-item-prev.carousel-item-right {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-.cid-s7xRErmhdh .active.carousel-item-right,
-.cid-s7xRErmhdh .carousel-item-next {
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-.cid-s7xRErmhdh .active.carousel-item-left,
-.cid-s7xRErmhdh .carousel-item-prev {
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
-}
-.cid-s7xRErmhdh .mbr-slider .carousel-control {
-  top: 50%;
-  width: 50px;
-  height: 50px;
-  margin-top: -1.5rem;
-  font-size: 35px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all .3s;
-}
-.cid-s7xRErmhdh .mbr-slider .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-s7xRErmhdh .mbr-slider .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-s7xRErmhdh .mbr-slider .carousel-control .mbr-iconfont {
-  font-size: 1.5rem;
-}
-@media (max-width: 767px) {
-  .cid-s7xRErmhdh .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-s7xRErmhdh .mbr-slider .carousel-indicators {
+.cid-s7yrNSu3c9 figcaption div {
   position: absolute;
   bottom: 0;
-  margin-bottom: 1.5rem !important;
+  width: 100%;
 }
-.cid-s7xRErmhdh .mbr-slider .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: .5;
-  transition: all .3s;
-}
-.cid-s7xRErmhdh .mbr-slider .carousel-indicators li.active,
-.cid-s7xRErmhdh .mbr-slider .carousel-indicators li:hover {
-  opacity: .9;
-}
-.cid-s7xRErmhdh .mbr-slider .carousel-indicators li::after,
-.cid-s7xRErmhdh .mbr-slider .carousel-indicators li::before {
-  content: none;
-}
-.cid-s7xRErmhdh .mbr-slider .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 576px) {
-  .cid-s7xRErmhdh .mbr-slider .carousel-indicators {
-    display: none !important;
+@media (max-width: 768px) {
+  .cid-s7yrNSu3c9 .image-block {
+    width: 100% !important;
   }
-}
-.cid-s7xRErmhdh .mbr-slider > .container img {
-  width: 100%;
-}
-.cid-s7xRErmhdh .mbr-slider > .container img + .row {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  left: 0;
-  z-index: 2;
-  -moz-transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.cid-s7xRErmhdh .mbr-slider > .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-@media (max-width: 576px) {
-  .cid-s7xRErmhdh .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-s7xRErmhdh .mbr-slider .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-s7xRErmhdh .mbr-slider .mbr-table-cell {
-  padding: 0;
-}
-.cid-s7xRErmhdh .carousel-item .container.container-slide {
-  position: initial;
-  width: auto;
-  min-height: 0;
-}
-.cid-s7xRErmhdh .full-screen .slider-fullscreen-image {
-  min-height: 100vh;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.cid-s7xRErmhdh .full-screen .slider-fullscreen-image.active {
-  display: -o-flex;
-}
-.cid-s7xRErmhdh .full-screen .container {
-  width: auto;
-  padding-right: 0;
-  padding-left: 0;
-}
-.cid-s7xRErmhdh .full-screen .carousel-item .container.container-slide {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-s7xRErmhdh .full-screen .carousel-item .container.container-slide img {
-  display: none;
-}
-.cid-s7xRErmhdh .mbr-background-video-preview {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-.cid-s7xRErmhdh .mbr-overlay ~ .container-slide {
-  z-index: auto;
-}
-.cid-s7xRErmhdh .mbr-slider.slide .container {
-  overflow: hidden;
-  padding: 0;
-}
-.cid-s7xRErmhdh .carousel-inner {
-  height: 100%;
-}
-.cid-s7xRErmhdh .slider-fullscreen-image {
-  height: 100%;
-  background: transparent !important;
-}
-.cid-s7xRErmhdh .image_wrapper {
-  height: 400px;
-  width: 100%;
-  position: relative;
-  display: inline-block;
-}
-.cid-s7xRErmhdh .image_wrapper img {
-  width: auto !important;
-  height: 100%;
-}
-.cid-s7xRErmhdh .carousel-item .container-slide {
-  text-align: center;
-}
-.cid-s7xRErmhdh .content-slider-wrap {
-  width: 60%;
 }
