--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1386,6 +1386,9 @@ section.lazy-placeholder:after {
 .cid-s8iGwWkWKr .mbr-section-btn {
   color: #ff3366;
 }
+.cid-s8iGwWkWKr H1 {
+  color: #149dcc;
+}
 .cid-s7V0qBF4pS {
   padding-top: 45px;
   padding-bottom: 30px;
@@ -1970,6 +1973,9 @@ section.lazy-placeholder:after {
 .cid-s8iGXeQ3QT .mbr-section-btn {
   color: #ff3366;
 }
+.cid-s8iGXeQ3QT H1 {
+  color: #55b4d4;
+}
 .cid-s87BzS0Jhy {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -2541,6 +2547,41 @@ section.lazy-placeholder:after {
 .cid-s8iCjvifbj .nav-link:hover,
 .cid-s8iCjvifbj .dropdown-item:hover {
   color: #cc2952 !important;
+}
+.cid-s8iNbkajRa {
+  padding-top: 105px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-s8iNbkajRa .icons-media-container {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding-top: 4rem;
+}
+.cid-s8iNbkajRa .icons-media-container .mbr-iconfont {
+  font-size: 96px;
+  color: #ffffff;
+}
+.cid-s8iNbkajRa .icons-media-container .icon-block {
+  padding-bottom: 1rem;
+}
+.cid-s8iNbkajRa .mbr-text {
+  color: #ffffff;
+}
+.cid-s8iNbkajRa .card {
+  padding-bottom: 1.5rem;
+}
+.cid-s8iNbkajRa .mbr-text,
+.cid-s8iNbkajRa .mbr-section-btn {
+  color: #ff3366;
+}
+.cid-s8iNbkajRa H1 {
+  color: #149dcc;
 }
 .cid-s7xtuJP8ga {
   padding-top: 105px;
@@ -3659,7 +3700,7 @@ section.lazy-placeholder:after {
 .cid-s88F1GSL7p {
   padding-top: 135px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background443.jpg");
+  background-image: url("../../../assets/images/background447.jpg");
 }
 .cid-s88F1GSL7p H1 {
   color: #efefef;
